# EventHandler

./: .gitignore  CMakeLists.txt  README.md
EventManager/: Manager.cpp  Manager.h
Exception/: EventException.cpp  EventException.h
